kustomize/apps/vms/frontend-admin/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: strip-prefix-frontend-admin-v1
  namespace: vms
spec:
  stripPrefix:
    prefixes:
      - /admin/v1
    forceSlash: true
