kustomize/apps/vms/frontend-admin/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: frontend-admin
  namespace: vms
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`example.com`) && PathPrefix(`/admin/v1`)
    middlewares:
    - name: strip-prefix-frontend-admin-v1
    - name: gzip-middleware
    services:
    - kind: Service
      name: frontend-admin
      port: 80
      scheme: http
